# verity

./: .dockerignore  .gitignore  .vercelignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE-APACHE  ONBOARDING.md  README.md  railway.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
bindings/r/verityx3p/src/rust/: Cargo.toml  document.rs
crates/verity-x3p/: Cargo.toml  README.md
crates/verity-x3p/src/: checksum.rs  lib.rs  writer.rs  xml.rs
crates/verity-x3p/tests/: roundtrip.rs
services/api/: Dockerfile  README.md  pyproject.toml
services/api/tests/: test_api.py  test_client.py  test_limits.py  test_mcp.py  test_reference_bundle.py  test_refusal.py  test_security.py  test_steps.py  test_v1.py
services/api/verity_api/: __init__.py  artifacts.py  decode.py  intermediates.py  limits.py  main.py  mcp_server.py  recipe.py  reference_bundle.py  references.py  steps.py
services/api/verity_api/references/: NOTICE.md  bullet_hamby252.npz  bullet_pooled.npz  bullet_pooled.provenance.json  cartridge_fadul.npz  cartridge_fadul.provenance.json  striated_land.npz  striated_land.provenance.json  toolmark_tmaRks.npz  toolmark_tmaRks.provenance.json
services/catalog/: .env.example  Dockerfile  README.md  deploy-railway.sh  pyproject.toml  railway.json
services/catalog/alembic/: env.py
services/catalog/alembic/versions/: 1a047a077d5f_initial_schema.py  1f79f18c6aef_enable_rls_anon_select_policy.py  5ed39b57d680_add_scan_trace_pair_diagnostic.py  b2f4a6c8d0e1_add_tool_toolmark.py  c8d0e2f4a6b8_lock_down_alembic_version.py  d4e6f8a0b2c4_add_benchmark_tables.py  f0b2d4e6a8c0_add_benchmarksplit_marks_mapping.py
services/catalog/benchmarks/bullets-v1/: folds.json  provenance.json  verity_metrics.json
services/catalog/benchmarks/cartridge-v1/: folds.json  provenance.json  verity_metrics.json
services/catalog/benchmarks/cartridge-v2/: folds.json  provenance.json  verity_metrics.json
services/catalog/benchmarks/toolmark-v1/: folds.json  provenance.json  verity_metrics.json
services/catalog/tests/: test_api.py  test_api_data_integrity.py  test_benchmark_api.py  test_benchmark_scoring.py  test_figshare.py  test_github.py  test_ingest.py  test_ingest_cartridge.py  test_manifest.py  test_migrate.py  test_models.py  test_nbtrd_crawl.py  test_paths.py  test_scalar_robots.py  test_security_headers.py  test_store.py  test_store_s3.py  test_toolmarks.py  test_virtual_kits.py
services/catalog/verity_catalog/: __init__.py  cli.py  config.py  db.py  ingest.py  migrate.py  models.py  store.py  store_s3.py  toolmarks.py  virtual_kits.py
services/catalog/verity_catalog/api/: __init__.py  app.py  body_limit.py  deps.py  envelope.py  head.py  queries.py  schemas.py
services/catalog/verity_catalog/api/routers/: benchmark.py  bullets.py  datasets.py  firearms.py  meta.py  (+2 more)
services/catalog/verity_catalog/benchmark/: __init__.py  io.py  kit.py  loader.py  scoring.py
services/catalog/verity_catalog/harvest/: __init__.py  base.py  figshare.py  github.py  nbtrd.py
services/catalog/verity_catalog/manifests/: fadul-cartridge-cases.yaml  hamby-173.yaml  hamby-252.yaml  hamby252-barrel1-sample.yaml  lapd.yaml  pgpd-beretta.yaml  phoenix.yaml  weller-cartridge-cases.yaml
services/engine/: README.md  pyproject.toml
services/engine/tests/: test_aggregate.py  test_areal.py  test_benchmark.py  test_cartridge_cmc.py  test_cmr.py  test_compare.py  test_cross_instrument.py  test_decision.py  test_fusion.py  test_hamby_demo.py  test_hamby_learned.py  test_hamby_validation.py  test_mae.py  test_preprocess.py  test_reference_io.py  test_registration.py  test_report.py  test_report_pdf.py  test_report_validation.py  test_representation.py  test_scope_guard.py  test_score_fusion.py  test_scorer.py  test_scorer_config.py  test_signature.py  test_surface_learned.py  test_surface_representation.py  test_toolmark_chumbley.py  test_toolmark_tmaRks.py  test_toolmark_transfer.py  test_trace.py  test_uncertainty.py  test_validate_weller.py  test_viz.py
services/engine/verity/: __init__.py  aggregate.py  areal.py  benchmark.py  cmr.py  compare.py  detect.py  orientation.py  region.py  report.py  report_pdf.py  report_validation.py  signature.py  surface.py  trace.py
services/engine/verity/baselines/: bulletxtrctr.py  bulletxtrctr_score.R  chumbley.py  chumbley_toolmark.R  cmc.py  cmc_cartridge.R
services/engine/verity/decision/: __init__.py  fusion.py  lr.py  metrics.py  scope_guard.py  score_fusion.py  scorer.py  scorer_config.py  uncertainty.py  validation.py
services/engine/verity/examples/: __init__.py  _reference_io.py  build_benchmark_data.py  build_benchmark_splits.py  build_bullet_pooled_reference.py  build_cartridge_fadul_reference.py  build_cartridge_validation_data.py  build_cmr_table_data.py  build_gallery.py  build_live_proof_screwdriver.py  build_method_examples.py  build_references.py  build_sample_screwdriver.py  build_striated_land_reference.py  build_toolmark_reference.py  build_toolmark_validation_data.py  build_tour.py  cartridge_cmc_proof.py  cartridge_fadul.py  cmr_cartridge.py  cmr_fusion.py  cross_instrument.py  diagnose_extraction.py  firearms_proof.py  hamby_km_knm.py  hamby_learned.py  hamby_validation.py  margin_levers.py  relock_baselines.py  ssl_learned.py  surface_learned.py  toolmark_ameslab.py  toolmark_chumbley_proof.py  toolmark_tmaRks.py  toolmark_transfer.py  trace_cli.py  validate_weller_frozen.py  weller_protocol.py
services/engine/verity/preprocess/: __init__.py  filters.py  form.py
services/engine/verity/registration/: __init__.py  align.py  engine.py
services/engine/verity/representation/: __init__.py  encoder.py  labels.py  mae.py  surface_encoder.py  surface_image.py
services/engine/verity/viz/: __init__.py  attribution.py  land_trace.py  pair_trace.py
services/mcp/: README.md  build_mcpb.sh  manifest.json  pyproject.toml
services/mcp/tests/: test_format.py
services/mcp/verity_mcp/: __init__.py  api.py  server.py
(+153 files in other folders)
