[package]
name = "verity-x3p"
description = "Native reader/writer for the X3P (ISO 25178-72 / ISO 5436-2) 3D surface topography format."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["forensics", "x3p", "metrology", "topography", "iso25178"]
categories = ["science", "parser-implementations"]
readme = "README.md"

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
zip = { version = "2.2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
