[project]
name = "verity-api"
version = "0.1.0"
description = "Verity comparison HTTP API — serves the calibrated comparison report."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "matplotlib>=3.7",
    "verity",
    "verity-x3p",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[project.scripts]
verity-api = "verity_api.main:run"

[tool.uv.sources]
# Editable so engine edits are picked up live in this monorepo (no stale copy).
verity = { path = "../engine", editable = true }
verity-x3p = { path = "../../bindings/python" }

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verity_api"]

[tool.hatch.build.targets.wheel.force-include]
"verity_api/references" = "verity_api/references"
