[project]
name = "verity-catalog"
version = "0.1.0"
description = "Verity data catalog — normalized catalog + content-addressed store + REST API for forensic X3P scans."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Eric Hare", email = "ericrhare@gmail.com" }]
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.14.2",
    "alembic>=1.13",
    "typer>=0.12",
    # Benchmark submission scoring (Cllr / PAV / AUC) — deliberately numpy-only,
    # no scikit-learn; parity with the engine's metrics is pinned by test.
    "numpy>=1.26",
]

[project.optional-dependencies]
# Ingestion needs to read X3P (verity-x3p) and fetch from the web.
ingest = ["verity-x3p", "httpx>=0.27", "pyyaml>=6"]
# REST API (Phase C): FastAPI service over the catalog. Needs yaml for the
# /datasets manifest resolver. Deliberately excludes the science stack.
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "pyyaml>=6"]
# Object-store backend (Cloudflare R2 / AWS S3 / MinIO) for the deploy path.
s3 = ["boto3>=1.34"]
# Postgres driver for the deploy path (migrate-db --to postgresql://…).
postgres = ["psycopg[binary]>=3.1"]
# httpx is needed by FastAPI's TestClient (and shared with the ingest extra).
dev = ["pytest>=8", "ruff>=0.6", "moto>=5", "httpx>=0.27"]

[project.scripts]
verity-catalog = "verity_catalog.cli:main"
verity-catalog-api = "verity_catalog.api.app:run"

# Dev-time source for the locally-built X3P binding (until it's on PyPI).
[tool.uv.sources]
verity-x3p = { path = "../../bindings/python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verity_catalog"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["alembic/versions"]  # autogenerated migrations

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer and FastAPI both require the call in the argument default (the idiomatic
# dependency-injection pattern).
extend-immutable-calls = [
    "typer.Argument",
    "typer.Option",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
