[project]
name = "verity"
version = "0.1.0"
description = "Verity — a domain-general surface-comparison engine: metrology preprocessing + registration for forensic X3P scans."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Eric Hare", email = "ericrhare@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Read X3P + pull scans from the catalog for the real-data demo.
demo = ["verity-x3p", "verity-catalog"]
dev = ["pytest>=8", "ruff>=0.6"]
# surfalize is GPL — kept in its own extra and used ONLY as a test oracle.
oracle = ["surfalize>=0.10"]

[project.scripts]
verity-demo-hamby = "verity.examples.hamby_km_knm:main"
verity-validate-hamby = "verity.examples.hamby_validation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verity"]

[tool.uv.sources]
verity-x3p = { path = "../../bindings/python" }
verity-catalog = { path = "../catalog" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
