[project]
name = "verity"
version = "0.1.0"
description = "Verity — a domain-general surface-comparison engine: metrology preprocessing + registration for forensic X3P scans."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Eric Hare", email = "ericrhare@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Read X3P + pull scans from the catalog for the real-data demo (matplotlib for
# the trace/diagnostic renderers).
demo = ["verity-x3p", "verity-catalog", "matplotlib>=3.7"]
dev = ["pytest>=8", "ruff>=0.6"]
# Trace artifact rendering (PNGs) without the rest of the demo stack.
viz = ["matplotlib>=3.7"]
# surfalize is GPL — kept in its own extra and used ONLY as a test oracle.
oracle = ["surfalize>=0.10"]
# The learned representation (Phase 2b) needs PyTorch.
learn = ["torch>=2.2"]

[project.scripts]
verity-demo-hamby = "verity.examples.hamby_km_knm:main"
verity-validate-hamby = "verity.examples.hamby_validation:main"
verity-validate = "verity.examples.hamby_validation:main"
verity-validation-report = "verity.report_validation:main"
verity-learn-hamby = "verity.examples.hamby_learned:main"
verity-learn-pooled = "verity.examples.hamby_learned:pooled_main"
verity-learn-surface = "verity.examples.surface_learned:main"
verity-learn-ssl = "verity.examples.ssl_learned:main"
verity-firearms-proof = "verity.examples.firearms_proof:main"
verity-toolmark-transfer = "verity.examples.toolmark_transfer:main"
verity-toolmark-ameslab = "verity.examples.toolmark_ameslab:main"
verity-margin = "verity.examples.margin_levers:main"
verity-trace = "verity.examples.trace_cli:main"
verity-trace-pairs = "verity.examples.trace_cli:pairs_main"
verity-toolmark-chumbley-proof = "verity.examples.toolmark_chumbley_proof:main"
verity-toolmark-tmaRks = "verity.examples.toolmark_tmaRks:main"
verity-cartridge-fadul = "verity.examples.cartridge_fadul:main"
verity-cartridge-cmc-proof = "verity.examples.cartridge_cmc_proof:main"
verity-cmr-cartridge = "verity.examples.cmr_cartridge:main"
verity-cmr-fusion = "verity.examples.cmr_fusion:main"
verity-build-references = "verity.examples.build_references:main"
verity-build-bullet-reference = "verity.examples.build_bullet_pooled_reference:build"
verity-build-cartridge-reference = "verity.examples.build_cartridge_fadul_reference:build"
verity-build-striated-reference = "verity.examples.build_striated_land_reference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verity"]

[tool.uv.sources]
verity-x3p = { path = "../../bindings/python" }
# editable so engine picks up catalog schema/model changes without a reinstall.
verity-catalog = { path = "../catalog", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
