[project]
name = "verity-mcp"
version = "0.1.0"
description = "MCP server for Verity — calibrated, reproducible forensic surface comparison for AI agents."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "requests>=2.31",
]

[project.scripts]
verity-mcp = "verity_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verity_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
